--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
     "buffer": "^6.0.3",
+    "ethers": "6.7.1",
     "parcel": "^2.9.3",
     "prettier": "^2.5.1",
     "process": "^0.11.10",
