--- a/sdk-demo/package.json
+++ b/sdk-demo/package.json
@@ -14,7 +14,7 @@
     "@types/node": "^16.18.36",
     "@types/react": "^18.2.12",
     "@types/react-dom": "^18.2.5",
-    "ethers": "^5.6.1",
+    "ethers": "6.7.1",
     "next": "^13.4.19",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
